--- a/JavaScript/style.css
+++ b/JavaScript/style.css
@@ -22,7 +22,13 @@ body {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+#loginPopup {
+  position: absolute;
+  left: 15px;
+  top: 15px;
 }
 
 a {
