--- a/JavaScript/style.css
+++ b/JavaScript/style.css
@@ -6,6 +6,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  background: #333;
 }
 #map {
   height: 100%;
@@ -18,17 +19,35 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 nav {
   display: flex;
+  background: #333;
   justify-content: center;
+}
+
+.answerContainer {
+  display: flex;
 }
 
 #loginPopup {
   position: absolute;
   left: 15px;
   top: 15px;
+  padding: 0.7em 1.4em;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.15em;
+  box-sizing: border-box;
+  text-transform: uppercase;
+  font-weight: 400;
+  box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
+  text-align: center;
+}
+
+button:hover {
+  border-color: rgba(255, 255, 255, 1);
 }
 
 a {
@@ -41,7 +60,7 @@ a {
   position: absolute;
   bottom: 15%;
   right: 15%;
-  background: #e02dfc;
+  background: #333;
   color: white;
   border: 2px solid #333;
   border-radius: 5px;
@@ -63,14 +82,14 @@ a {
 .modal {
   position: absolute;
   margin: 0 auto;
-  background: lightgreen;
+  background: #333;
   border-radius: 10px;
   padding: 1.5em;
 }
 
 :root {
   --modal-duration: 1s;
-  --modal-color: #428bca;
+  --modal-color: #333;
 }
 
 body {
@@ -91,14 +110,16 @@ body {
 .button {
   background: beige;
   padding: 1em 2em;
+  font-family: "Roboto", sans-serif;
   color: #333;
+  font-size: 0.9em;
   border: 0;
   border-radius: 5px;
   font-weight: 700;
   cursor: pointer;
   text-transform: uppercase;
   margin: 0 auto;
-  width: 25vw;
+  width: 15vw;
 }
 
 .button:hover {
@@ -140,7 +161,7 @@ body {
 
 .modal-body {
   padding: 10px 20px;
-  background: #fff;
+  background: #333;
 }
 
 .modal-footer {
